Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 ---
+
 layout: landing-page
 ---		
 		<!-- Main -->
@@ -36,7 +37,7 @@ layout: landing-page
 							<div class="4u skel-cell-important">
 							
 								<ul class="featured-icons">
-									<li><span class="icon fa-clock-o"><span class="label">Feature 1</span></span></li>
+									<li><span class="icon">&#xf017;<span class="label">Feature 1</span></span></li>
 									<li><span class="icon fa-volume-up"><span class="label">Feature 2</span></span></li>
 									<li><span class="icon fa-laptop"><span class="label">Feature 3</span></span></li>
 									<li><span class="icon fa-inbox"><span class="label">Feature 4</span></span></li>
